# vc

./: .gitignore  CHANGELOG.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-MIT  Makefile  Makefile.toml  README.md  clippy.toml  datasec.rs  deny.toml  release.md  rust-toolchain.toml  rustc-ice-2024-06-07T00_59_22-14182.txt  rustc-ice-2024-06-07T00_59_22-14185.txt  rustc-ice-2024-06-07T00_59_27-14195.txt  rustc-ice-2024-06-07T00_59_27-14196.txt  rustc-ice-2024-06-07T00_59_32-14204.txt  rustc-ice-2024-06-07T00_59_32-14205.txt  rustc-ice-2024-06-07T00_59_37-14213.txt  rustc-ice-2024-06-07T00_59_37-14214.txt  rustc-ice-2024-06-07T00_59_45-14222.txt  rustc-ice-2024-06-07T00_59_45-14223.txt  rustc-ice-2024-06-07T00_59_51-14235.txt  rustc-ice-2024-06-07T00_59_51-14236.txt  rustc-ice-2024-06-07T00_59_57-14243.txt  rustc-ice-2024-06-07T00_59_57-14244.txt  rustc-ice-2024-06-07T01_00_22-14253.txt  rustc-ice-2024-06-07T01_00_22-14254.txt  rustc-ice-2024-06-07T01_00_30-14262.txt  rustc-ice-2024-06-07T01_00_30-14263.txt  rustc-ice-2024-06-07T01_00_31-14268.txt  rustc-ice-2024-06-07T01_00_31-14269.txt  rustc-ice-2024-06-07T01_00_38-14292.txt  rustc-ice-2024-06-07T01_00_38-14293.txt  rustc-ice-2024-06-07T01_00_40-14300.txt  rustc-ice-2024-06-07T01_00_40-14301.txt  (+28 more)
crates/core/: Cargo.toml  README.md
crates/core-utils/: Cargo.toml  README.md
crates/core-utils/src/: endpoint.rs  jws.rs  lib.rs  serde.rs  signature.rs
crates/core/src/: gen.rs  lib.rs  pkce.rs  stringify.rs  urlencode.rs
crates/crypto/: CHANGELOG.md  Cargo.toml
crates/crypto/src/: lib.rs  local.rs
crates/datasec/: Cargo.toml  README.md
crates/datasec/src/: cose.rs  did.rs  jose.rs  lib.rs
crates/did/: Cargo.toml  README.md
crates/did-core/: Cargo.toml
crates/did-core/src/: did.rs  document.rs  error.rs  ion.rs  jwk.rs  key.rs  lib.rs
crates/did/src/: did.rs  document.rs  error.rs  key.rs  lib.rs  resolution.rs  web.rs
crates/dif-exch/: Cargo.toml  README.md
crates/dif-exch/src/: lib.rs  matcher.rs
crates/iso-mdl/: Cargo.toml  README.md
crates/iso-mdl/data/: mso_mdoc.cbor  mso_mdoc.json
crates/iso-mdl/src/: bytes.rs  cbor.rs  cose.rs  cose_key.rs  lib.rs  mdoc.rs  model.rs  mso.rs  tag24.rs
crates/macro-tests/: Cargo.toml  README.md
crates/macro-tests/tests/: authorization.rs  create_offer.rs  credential.rs  token.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: authorization.rs  create_offer.rs  credential.rs  expand.rs  issuer.rs  lib.rs  parse.rs  token.rs
crates/macros/tests/: authorization.rs  authorize.rs  create_offer.rs  credential.rs  issuer.rs  token.rs
crates/openid/: Cargo.toml  README.md
crates/openid/src/: endpoint.rs  error.rs  issuance.rs  issuer.rs  lib.rs  macros.rs  mso_mdoc.rs  oauth.rs  presentation.rs  provider.rs  stringify.rs  verifier.rs
crates/openid4vc/: Cargo.toml  README.md
crates/openid4vc/src/: endpoint.rs  error.rs  issuance.rs  jws.rs  lib.rs  presentation.rs  (+1 more)
crates/proof/: Cargo.toml
crates/status/: Cargo.toml  README.md
crates/test-holder/: Cargo.toml
crates/test-issuer/: Cargo.toml  README.md
crates/test-utils/: Cargo.toml  README.md
crates/vercre-core/: CHANGELOG.md  Cargo.toml  README.md
crates/vercre-exch/: Cargo.toml  README.md
crates/vercre-vc/: Cargo.toml
test-utils/: Cargo.toml
test-utils/src/: lib.rs  vci-provider.rs  vp-provider.rs  wallet-provider.rs  wallet.rs
vercre-core/: CHANGELOG.md  Cargo.toml  README.md
vercre-core/src/: callback.rs  error.rs  gen.rs  holder.rs  jwt.rs  lib.rs  metadata.rs  proof.rs  provider.rs  stringify.rs  vci.rs  vp.rs
vercre-holder/: CHANGELOG.md  Cargo.toml  README.md
vercre-holder/src/: credential.rs  issuance.rs  lib.rs  presentation.rs  provider.rs
vercre-holder/tests/: issuance.rs  issuer_auth.rs  issuer_auth_2.rs  issuer_auth_no_grants.rs  issuer_auth_no_grants_2.rs  preauth.rs  preauth_2.rs  preauth_deferred.rs  preauth_deferred_2.rs  preauth_narrow.rs  preauth_narrow_2.rs  preauth_no_grants.rs  preauth_no_grants_2.rs  presentation.rs  presentation_2.rs  presentation_crux.rs  provider.rs  wallet_cred_def.rs  wallet_cred_def_2.rs  wallet_format.rs  wallet_format_2.rs  wallet_scope.rs  wallet_scope_2.rs
vercre-issuer/: CHANGELOG.md  Cargo.toml  README.md
vercre-issuer/benches/: bench.rs
vercre-issuer/src/: authorize.rs  batch.rs  create_offer.rs  credential.rs  credential_offer.rs  deferred.rs  lib.rs  metadata.rs  notification.rs  oauth_server.rs  par.rs  provider.rs  register.rs  state.rs  testing.rs  token.rs
vercre-issuer/tests/: auth_code_flow.rs  authorization.rs  authorization_flow.rs  deferred.rs  deferred_flow.rs  issuer_initiated.rs  pre_auth_code_flow.rs  pre_authorized.rs  pre_authorized_flow.rs  utils.rs  wallet.rs  wallet_initiated.rs
vercre-test/: Cargo.toml
vercre-test/src/: builder.rs  current.rs  handler.rs  lib.rs  provider.rs  simple.rs
vercre-vci/: CHANGELOG.md  Cargo.toml  README.md
vercre-vci/src/: authorize.rs  batch.rs  create_offer.rs  credential.rs  deferred.rs  endpoint.rs  invoke.rs  lib.rs  metadata.rs  notification.rs  register.rs  state.rs  token.rs
vercre-vci/tests/: auth_code_flow.rs  deferred_flow.rs  pre_auth_code_flow.rs
vercre-verifier/: Cargo.toml
vercre-verifier/benches/: bench.rs
vercre-verifier/src/: create_request.rs  lib.rs  metadata.rs  request.rs  request_object.rs  response.rs  state.rs  testing.rs
vercre-vp/: CHANGELOG.md  Cargo.toml  README.md
vercre-vp/benches/: bench.rs
vercre-vp/examples/: README.md
vercre-vp/src/: create_request.rs  endpoint.rs  invoke.rs  lib.rs  metadata.rs  request.rs  response.rs  state.rs
vercre-wallet/: CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
vercre-wallet/examples/: Cargo.toml  Crux.toml
vercre-wallet/src/: app.rs  capabilities.rs  credential.rs  issuance.rs  lib.rs  metadata.rs  offer.rs  presentation.rs  provider.rs  reset.rs  store.rs  storer.rs  test_common.rs  typegen.rs
vercre-wallet/tests/: issuance.rs  issuer.rs  presentation.rs  verifier.rs
(+1314 files in other folders)
