[package]
name = "credibil-vc"
description = "OpenID for Verifiable Credential Issuance and Verifiable Presentation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
issuer = []
verifier = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
bitvec = "1.0.1"
chrono.workspace = true
credibil-did.workspace = true
credibil-infosec.workspace = true
fastrand = "2.3.0"
flate2 = "1.0.35"
image = { version = "0.25.5", default-features = false, features = ["png"] }
percent-encoding = "2.3.1"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.7.2"
sha2 = "0.10.8"
thiserror = "2.0.11"
tracing.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
insta.workspace = true
rstest = "0.24.0"
tracing-subscriber.workspace = true

[workspace]
members = [
    "crates/*",
    "examples/issuer",
    "examples/verifier",
    "examples/wallet/src-tauri",
    "vercre-holder",
    "vercre-issuer",
    "vercre-verifier",
]
exclude = ["vercre-holder/examples/*"]
resolver = "2"

[workspace.package]
authors = ["Vercre"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2021"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://vercre.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vercre/vc"
rust-version = "1.80"
version = "0.1.0-alpha.6"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# clippy::all = correctness, suspicious, style, complexity, perf
# not using (yet) -Dclippy::restriction
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.91"
assert_let_bind = "0.1.1"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
insta = { version = "1.40.0", features = ["redactions", "yaml"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["alloc"] }
test-utils = { path = "crates/test-utils" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors", "set-header", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
vercre-core = { path = "crates/core", version = "0.1.0-alpha.6" }
credibil-did = { git = "https://github.com/credibil/did.git" }
vercre-dif-exch = { path = "crates/dif-exch", version = "0.1.0-alpha.6" }
vercre-holder = { path = "vercre-holder", version = "0.1.0-alpha.6" }
credibil-infosec = { git = "https://github.com/credibil/infosec.git" }
vercre-issuer = { path = "vercre-issuer", version = "0.1.0-alpha.6" }
vercre-macros = { path = "crates/macros", version = "0.1.0-alpha.6" }
vercre-openid = { path = "crates/openid", version = "0.1.0-alpha.6" }
vercre-status = { path = "crates/status", version = "0.1.0-alpha.6" }
vercre-verifier = { path = "vercre-verifier", version = "0.1.0-alpha.6" }
vercre-w3c-vc = { path = "crates/w3c-vc", version = "0.1.0-alpha.6" }

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
