[package]
name = "credibil-vc"
description = "OpenID for Verifiable Credential Issuance and Verifiable Presentation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["issuer", "verifier"]
issuer = []
verifier = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
bitvec = "1.0.1"
chrono.workspace = true
ciborium = "0.2.2"
coset = "0.3.8"
credibil-did.workspace = true
credibil-infosec.workspace = true
derive_builder.workspace = true
ed25519-dalek = "2.1.1"
fastrand = "2.3.0"
flate2 = "1.1.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
percent-encoding = "2.3.1"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
rand = "0.9.0"
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.7.2"
sha2 = "0.10.8"
thiserror = "2.0.11"
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
async-std = { version = "1.13.0", features = ["attributes"] }
insta.workspace = true
rstest = "0.24.0"
test-holder.workspace = true
test-issuer.workspace = true
test-verifier.workspace = true
tokio.workspace = true

# -----------------------------------------------
# Workspace
# -----------------------------------------------
[workspace]
members = [
    "crates/*",
    "examples/issuer",
    "examples/verifier",
]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/vc"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# clippy::all = correctness, suspicious, style, complexity, perf
# not using (yet) -Dclippy::restriction
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.96"
assert_let_bind = "0.1.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
credibil-did = "0.1.2"
credibil-infosec = "0.1.1"
credibil-vc = { path = "." }
derive_builder = "0.20.2"
insta = { version = "1.42.1", features = ["redactions", "yaml"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["alloc"] }
test-holder = { path = "crates/test-holder" }
test-issuer = { path = "crates/test-issuer" }
test-verifier = { path = "crates/test-verifier" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.14.0", features = ["fast-rng", "v4"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
