[package]
description = "Test utilities"
# license = "MIT OR Apache-2.0"
name = "test-utils"
# readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
licence.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
k256.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true
