[package]
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
name = "vercre-core"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
typegen = []

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa.workspace = true
ed25519-dalek = "2.1.1"
image = { version = "0.24.9", default-features = false, features = ["png"] }
k256 = { workspace = true, features = ["jwk"] }
qrcode-rs = { version = "0.1.2", default-features = false, features = ["image"] }
regex = "1.10.3"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.6"
serde_qs = "0.12.0"
signature = "2.2.0"
thiserror = "1.0.57"
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2.0.1", features = ["js"] }

[dev-dependencies]
insta = { version = "1.35.1", features = ["filters", "redactions", "yaml"] }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
