[package]
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
name = "vercre-core"
publish = false
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
typegen = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa.workspace = true
ed25519-dalek = "2.1.1"
fastrand = "2.0.1"
image = { version = "0.24.9", default-features = false, features = ["png"] }
k256 = { workspace = true, features = ["jwk"] }
qrcode = { version = "0.13.0", default-features = false, features = ["image"] }
regex = "1.10.3"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.7"
serde_qs = "0.12.0"
signature = "2.2.0"
thiserror = "1.0.57"
tracing.workspace = true

[dev-dependencies]
insta = { version = "1.36.0", features = ["filters", "redactions", "yaml"] }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
