[package]
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
name = "vercre-core"
publish = false
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
typegen = []
wasm = ["fastrand/js"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa.workspace = true
ed25519-dalek = "2.1.1"
fastrand = "2.1.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
k256 = { workspace = true, features = ["jwk"] }
qrcode = { version = "0.14.0", default-features = false, features = ["image"] }
regex = "1.10.4"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.7"
serde_qs = "0.13.0"
signature = "2.2.0"
thiserror = "1.0.60"
tracing.workspace = true

[dev-dependencies]
insta = { version = "1.38.0", features = ["filters", "redactions", "yaml"] }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
