[package]
name = "vercre-holder"
description = "OpenID compliant Verifiable Credential holder API"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core-utils.workspace = true
dif-exch.workspace = true
openid4vc.workspace = true
provider.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true
vercre-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
base64ct.workspace = true
ecdsa.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
insta.workspace = true
issuer-provider = { path = "../examples/providers/issuer" }
holder-provider = { path = "../examples/providers/holder" }
tokio.workspace = true
vercre-issuer.workspace = true
vercre-verifier.workspace = true
verifier-provider = { path = "../examples/providers/verifier" }
