[package]
name = "vercre-holder"
description = "OpenID compliant Verifiable Credential holder API, typically implemented by a wallet"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true
vercre-core.workspace = true
credibil-did.workspace = true
vercre-dif-exch.workspace = true
credibil-infosec.workspace = true
vercre-issuer.workspace = true
vercre-macros.workspace = true
vercre-openid.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
insta.workspace = true
test-utils.workspace = true
tokio.workspace = true
vercre-verifier.workspace = true
