[package]
name = "vercre-issuer"
description = "OpenID for Verifiable Credential Issuance"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
# crate-type = ["cdylib", "rlib"]

[[bench]]
bench = true
name = "bench"
path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
vercre-core.workspace = true
vercre-jwt.workspace = true
vercre-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
futures.workspace = true
insta.workspace = true
providers.workspace = true
test-utils.workspace = true
tokio.workspace = true
