[package]
name = "vercre-issuer"
description = "OpenID for Verifiable Credential Issuance"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [[bench]]
# bench = true
# name = "bench"
# path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
vercre-core-utils.workspace = true
vercre-datasec.workspace = true
derive_builder.workspace = true
vercre-openid.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
futures.workspace = true
insta.workspace = true
vercre-test-utils.workspace = true
tokio.workspace = true
