[package]
name = "vercre-issuer"
description = "OpenID for Verifiable Credential Issuance"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [[bench]]
# bench = true
# name = "bench"
# path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
vercre-core.workspace = true
vercre-datasec.workspace = true
vercre-did.workspace = true
vercre-macros.workspace = true
vercre-openid.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
async-std = { version = "1.13.0", features = ["attributes"] }
insta.workspace = true
rstest = "0.22.0"
tokio.workspace = true
vercre-test-utils.workspace = true
