[package]
name = "vercre-test"
description = "OpenID for Verifiable Credential Issuance"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
assert_let_bind.workspace = true
base64ct.workspace = true
chrono.workspace = true
core-utils.workspace = true
derive_builder.workspace = true
futures.workspace = true
insta.workspace = true
openid.workspace = true
proof.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
test-utils.workspace = true
tokio.workspace = true
tracing.workspace = true
w3c-vc.workspace = true
