[package]
description = "OpenID for Verifiable Credential Issuance"
license = "MIT OR Apache-2.0"
name = "vercre-vci"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
# licence.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[example]]
name = "http-issuer"
path = "examples/http/main.rs"

[[bench]]
bench = true
name = "bench"
path = "benches/bench.rs"

[lints]
workspace = true

# [lints.clippy]
[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true

[dev-dependencies]
assert_let_bind = "0.1.1"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
futures = "0.3.30"
insta = { version = "1.35.1", features = ["filters", "redactions", "yaml"] }
lazy_static = "1.4.0"
oauth2 = { version = "4.4.2" }
serde_qs = "0.12.0"
test-utils = { path = "../test-utils" }
tokio = { version = "1.36.0", default-features = false, features = ["fs", "macros", "rt"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
