[package]
description = "OpenID for Verifiable Credential Issuance"
license = "MIT OR Apache-2.0"
name = "vercre-vci"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[example]]
name = "http-issuer"
path = "examples/http/main.rs"

[[bench]]
bench = true
name = "bench"
path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true

[dev-dependencies]
assert_let_bind = "0.1.1"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
insta = { version = "1.38.0", features = ["filters", "redactions", "yaml"] }
lazy_static = "1.4.0"
oauth2 = { version = "4.4.2" }
serde_qs = "0.13.0"
test-utils = { path = "../test-utils" }
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
