[package]
description = "OpenID for Verifiable Credential Issuance"
license = "MIT OR Apache-2.0"
name = "vercre-vci"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[example]]
name = "http-issuer"
path = "examples/http/main.rs"

[[bench]]
bench = true
name = "bench"
path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
axum-extra.workspace = true
axum.workspace = true
futures.workspace = true
insta.workspace = true
lazy_static.workspace = true
oauth2 = { version = "4.4.2" }
serde_qs = "0.13.0"
test-utils.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
