[package]
name = "vercre-verifier"
description = "OpenID for Verifiable Presentations"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false

[[bench]]
bench = true
name = "bench"
path = "benches/bench.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path = { version = "0.6.7", default-features = true }
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true
vercre-pe.workspace = true
vercre-proof.workspace = true
vercre-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
futures.workspace = true
insta.workspace = true
providers.workspace = true
test-utils.workspace = true
tokio.workspace = true
