[package]
name = "vercre-verifier"
description = "OpenID for Verifiable Presentations"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
chrono.workspace = true
core-utils.workspace = true
derive_builder.workspace = true
dif-exch.workspace = true
endpoint.workspace = true
openid4vc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path = { version = "0.6.7", default-features = true }
tracing.workspace = true
uuid.workspace = true
w3c-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
insta.workspace = true
test-utils.workspace = true
tokio.workspace = true
