[package]
name = "vercre-verifier"
description = "OpenID for Verifiable Presentations"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path = { version = "0.6.7", default-features = true }
tracing.workspace = true
uuid.workspace = true
vercre-core.workspace = true
vercre-datasec.workspace = true
vercre-dif-exch.workspace = true
vercre-openid.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
assert_let_bind.workspace = true
insta.workspace = true
tokio.workspace = true
vercre-test-utils.workspace = true
