[package]
description = "OpenID compliant Verifiable Credential wallet"
license = "MIT OR Apache-2.0"
name = "vercre-wallet"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
# licence.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
# Workaround until Cargo supports artifact dependencies (https://github.com/rust-lang/cargo/issues/9096)
# https://mozilla.github.io/uniffi-rs/tutorial/foreign_language_bindings.html#creating-the-bindgen-binary
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
typegen = ["crux_core/typegen", "vercre-core/typegen"]

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }

[dependencies]
anyhow.workspace = true
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.34", features = ["serde"] }
crux_core = "0.7.3"
crux_http = "0.6"
futures = "0.3.30"
http-types = "2.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde.workspace = true
serde_json.workspace = true
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.57"
uniffi = { version = "0.26.1", features = ["cli"] }
urlencoding = "2.1.3"
uuid.workspace = true
vercre-core.workspace = true
wasm-bindgen = "0.2.91"

[dev-dependencies]
assert_let_bind = "0.1.1"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-test = "14.3.0"
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
test-utils = { path = "../test-utils" }
tokio = { version = "1.36.0", default-features = false, features = ["fs", "macros", "rt"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing.workspace = true
vercre-vci = { path = "../vercre-vci" }
vercre-vp = { path = "../vercre-vp" }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.26.1", features = ["cli"] }
