[package]
description = "OpenID compliant Verifiable Credential wallet"
license = "MIT OR Apache-2.0"
name = "vercre-wallet"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
# Workaround until Cargo supports artifact dependencies (https://github.com/rust-lang/cargo/issues/9096)
# https://mozilla.github.io/uniffi-rs/tutorial/foreign_language_bindings.html#creating-the-bindgen-binary
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
typegen = ["crux_core/typegen", "vercre-core/typegen"]
wasm = ["vercre-core/wasm", "dep:web-sys"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
crux_core = "0.7.4"
crux_http = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.21"
olpc-cjson = "0.1.3"
serde.workspace = true
serde_json.workspace = true
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.59"
uniffi = { version = "0.27.1", features = ["cli"] }
urlencoding = "2.1.3"
uuid.workspace = true
vercre-core.workspace = true
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"], optional = true }

[dev-dependencies]
assert_let_bind = "0.1.1"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-test = "14.9.0"
insta = { version = "1.38.0", features = ["redactions", "yaml"] }
test-utils = { path = "../test-utils" }
tokio = { version = "1.37.0", default-features = false, features = ["fs", "macros", "rt"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
vercre-vci = { path = "../vercre-vci" }
vercre-vp = { path = "../vercre-vp" }

[build-dependencies]
uniffi = { version = "0.27.1", features = ["build"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.27.1", features = ["cli"] }
