[package]
name = "core-utils"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[features]
wasm = ["fastrand/js"]

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
fastrand = "2.1.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["filters", "redactions", "yaml"] }
