[package]
name = "core-utils"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[features]
wasm = ["fastrand/js"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
ecdsa.workspace = true
ed25519-dalek = "2.1.1"
fastrand = "2.1.0"
k256.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
